--- a/app/views/device_types/index.html.slim
+++ b/app/views/device_types/index.html.slim
@@ -31,17 +31,10 @@
                       th
                       = content_tag :th, sort_link(@q, :name)
                       th
-                  tbody                   
-                    - @device_types.each do |device_type|
-                      tr 
-                        td.small-cell.v-align-middle
-                          = check_box_tag "device_type_ids[]", device_type.id, nil , class: "device_type_checkbox"
-                        td
-                          = link_to device_type.name, device_type
-                        td
-                          = link_to 'Edit', edit_device_type_path(device_type)
+                  tbody#device-types-tbody
+                    = render partial: '/device_types/partials/device_types_rows', locals: { device_types: @device_types }
 
-              p = paginate @device_types
+              p.pagination = link_to_next_page(@device_types, 'Load more data', :remote => true)
 
 #quick-access.admin-bar style="bottom: -115px;"
   .admin-bar-inner
