--- a/app/views/devices/manage.html.slim
+++ b/app/views/devices/manage.html.slim
@@ -9,7 +9,7 @@
         .row
           .col-md-12
             table.table
-              tr
+              thead
                 th Name
                 th Device ID
                 th IMEI
@@ -17,18 +17,10 @@
                 th Telephone Number
                 th Status
                 th Actions
-              - @devices.each do |d|
-                tr
-                  td.rest-in-place id="#{dom_id d}" data-url="/devices/#{d.id}" data-object='device' data-attribute='name' data-placeholder='Enter a name' = d.name
-                  td
-                  td = d.emei
-                  td
-                  td
-                  td
-                    .label.label-success= "Active"
-                  td
+              tbody#manage-device-tbody
+                = render partial: '/devices/partials/manage_devices_rows'
                   
-          = paginate @devices
+          p.pagination = link_to_next_page(@devices, 'Load more data', :remote => true)
 
   .col-md-4
     .grid.simple
