--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -16,7 +16,8 @@
     user: current_user,
     last_location: current_user.car.try(:locations).try(:last),
     orders: Order.assigned_home(current_user.id, params[:filter]),
-    all_orders: Order.assigned_to(current_user.id, params[:filter])
+    all_orders: Order.assigned_to(current_user.id, params[:filter]),
+    active_order: @active_order
 
   = render 'destinations_drivers/partials/decline'
 
