--- a/app/views/layouts/guest.html.slim
+++ b/app/views/layouts/guest.html.slim
@@ -5,6 +5,7 @@ html
     meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     = include_gon(watch: true)
     = stylesheet_link_tag    'application', media: 'all'
+    script src="//maps.google.com/maps/api/js?v=3.13&sensor=false&libraries=geometry" type="text/javascript"
     = javascript_include_tag 'application'
     = csrf_meta_tags
   body.error-body.no-top.lazy
