Change to datepicker

--- a/app/views/layouts/_menu.html.slim
+++ b/app/views/layouts/_menu.html.slim
@@ -13,11 +13,11 @@ ul
         span.title Alerts
         span.badge.badge-danger.pull-right = @alerts_count
 
-  li class="#{'active' if current_page?(notifications_path)}"
-    a href="#{notifications_path}"
-      = fa_icon "bell"
-      span.title Notifications
-      span.badge.badge-danger.pull-right = @notifications_count
+  / li class="#{'active' if current_page?(notifications_path)}"
+  /   a href="#{notifications_path}"
+  /     = fa_icon "bell"
+  /     span.title Notifications
+  /     span.badge.badge-danger.pull-right = @notifications_count
 
   li
     a href="javascript:;"
@@ -36,11 +36,11 @@ ul
           span.title Sentbox
           span.badge.badge-disable.pull-right.m-r-30 = @outbox_count
 
-  li class="#{'active' if current_page?(orders_path)}"
-    a href="#{orders_path}"
-      = fa_icon "dashcube"
-      span.title Order Package
-      span.arrow
+  / li class="#{'active' if current_page?(orders_path)}"
+  /   a href="#{orders_path}"
+  /     = fa_icon "dashcube"
+  /     span.title Order Package
+  /     span.arrow
 
   - if is_employee?(current_user)
     li class="#{'active' if current_page?(reports_path)}"
