--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,7 +7,8 @@ html
 
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
 
-    script src="//maps.google.com/maps/api/js?v=3.13&sensor=false&libraries=geometry" type="text/javascript"
+    script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbAWCsDX9uu3zk5WwHnLUDwjihs06RTDo&sensor=false&libraries=geometry&callback=initMap" type="text/javascript"
+    / script src="//maps.google.com/maps/api/js?v=3.13&sensor=false&libraries=geometry" type="text/javascript"
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = javascript_include_tag 'https://bridge.paymill.com/'
     javascript:
